--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -1,26 +1,27 @@
-.experiencia {
+.projetos {
   max-width: 1200px;
   padding: 40px 20px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 100px;
+  border-bottom: #141414 solid 0.2px;
 }
 
-.experiencia .subtitulo {
+.projetos .subtitulo {
   color: #e0e0e0;
 }
 
-.experiencia-texto {
+.projetos-texto {
   font-size: 1.5rem;
   line-height: 1.33;
   max-width: 40ch;
   margin-bottom: 60px;
-  color: #525252;
+  color: #e0e0e0;
 }
 
-.experiencia-texto strong {
-  color: #141414;
+.projetos-texto strong {
+  color: #fff;
 }
 
 .empresa {
@@ -28,7 +29,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 10px 20px;
   padding: 20px;
-  background: #f5f5f5;
+  background: #141414;
   margin-bottom: 20px;
   border-radius: 4px;
   position: relative;
@@ -39,7 +40,7 @@
   display: block;
   width: 4px;
   height: 20px;
-  background: linear-gradient(#b6f829, #67dd0a);
+  background: linear-gradient(#b629f8, #800add);
   position: absolute;
   top: 20px;
   left: -4px;
@@ -51,7 +52,7 @@
   left: -100px;
   text-align: right;
   width: 80px;
-  color: #525252;
+  color: #f5f5f5;
   font-size: 0.875rem;
 }
 
@@ -63,7 +64,7 @@
 
 .empresa-texto {
   font-size: 0.875rem;
-  color: #525252;
+  color: #fff;
   line-height: 1.4;
 }
 
@@ -78,20 +79,21 @@
   font-size: 0.875;
   line-height: 1.4;
   border-radius: 4px;
-  background: white;
+  background: #292929;
   padding: 5px 10px;
+  color: #fff;
 }
 
 @media (max-width: 800px) {
-  .experiencia {
+  .projetos {
     grid-template-columns: 1fr;
     gap: 40px;
   }
-  .experiencia .subtitulo {
+  .projetos .subtitulo {
     color: #141414;
   }
 
-  .experiencia-texto {
+  .projetos-texto {
     font-size: 1.25rem;
   }
 
