--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,15 @@
 .header {
+  background: #040405;
+}
+
+.header-container {
   max-width: 1200px;
   padding: 40px 20px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: #141414 solid 0.2px;
 }
 
 .header-menu {
@@ -19,19 +24,19 @@
   line-height: 1.3;
   padding: 10px 20px;
   text-decoration: none;
-  color: #141414;
+  color: #e5e5e5;
   display: block;
 }
 
 @media (max-width: 800px) {
-  .header {
+  .header-container {
     flex-direction: column;
     gap: 40px;
     padding: 20px;
   }
 
-  .header a {
-    background-color: #f5f5f5;
+  .header-container a {
+    background-color: #141414;
     border-radius: 4px;
   }
 }
