--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -28,17 +28,28 @@
 .projetos picture {
   grid-row: 2;
 }
-.projetos .conteudo {
+.projetos .conteudo-projetos {
   display: flex;
   flex-direction: column;
   gap: 20px;
   grid-row: 2;
 }
 
-.projetos .conteudo ul {
+.projetos ul {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  font-weight: bold;
+}
+
+.projetos ul li:hover {
+  background: -webkit-linear-gradient(
+    135deg,
+    rgba(128, 10, 221, 1) 20%,
+    rgba(182, 41, 248, 1) 46%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .projetos a img {
