--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -52,7 +52,10 @@
   -webkit-text-fill-color: transparent;
 }
 
-.projetos a img {
+.projetos img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 4px;
 }
 
